--- a/app/views/home/_administrator.slim
+++ b/app/views/home/_administrator.slim
@@ -16,10 +16,10 @@ section.welcome-section#administrator
               .welcome-small-section__inner.is-work
                 .welcome-small-section__description
                   .row.is-gutter-width-24
-                    .col-md-3
+                    .col-xs-12.col-md-3
                       .welcome-child-section__member-image-container
                         = image_tag('komagata.jpg', class: 'welcome-child-section__member-image')
-                    .col-md-9
+                    .col-xs-12.col-md-9
                       h3.welcome-small-section__name
                         | 駒形真幸
                         span.welcome-small-section__job
@@ -43,10 +43,10 @@ section.welcome-section#administrator
               .welcome-small-section__inner.is-work
                 .welcome-small-section__description
                   .row.is-gutter-width-24
-                    .col-md-3
+                    .col-xs-12.col-md-3
                       .welcome-child-section__member-image-container
                         = image_tag('machida.jpg', class: 'welcome-child-section__member-image')
-                    .col-md-9
+                    .col-xs-12.col-md-9
                       h3.welcome-small-section__name
                         | 町田 哲平
                         span.welcome-small-section__job
@@ -68,7 +68,7 @@ section.welcome-section#administrator
     section.welcome-child-section
       h3.welcome-child-section__title
         | 運営サービス
-      .welcome-child-section__description.is-text-align-center
+      .welcome-child-section__description.is-lead-text
         p
           | 作業週にはこれらのサービスを手伝っていただきます。
       .welcome-small-sections
