--- a/app/views/home/_other.slim
+++ b/app/views/home/_other.slim
@@ -2,7 +2,9 @@ section.welcome-section#other
   .container
     h2.welcome-section__title
       = image_tag('question.svg', class: 'welcome-section__title-question-icon')
-      | 他に何かいいことってある？
+      | 他に何か
+      br.is-hidden-md-up
+      | いいことってある？
     section.welcome-child-section
       .welcome-child-section__description
         p
