--- a/app/views/home/_tutorials.slim
+++ b/app/views/home/_tutorials.slim
@@ -4,58 +4,58 @@ section.welcome-section#tutorials
       = image_tag('question.svg', class: 'welcome-section__title-question-icon')
       | 何を学ぶの？
     section.welcome-child-section
-      .welcome-child-section__description.is-text-align-center
+      .welcome-child-section__description.is-lead-text
         p
           | 学習内容は以下になります。
-          br
+          br.is-hidden-sm-down
           | 全てを終えるまで、プログラム未経験の方だと一年以上、
-          br
+          br.is-hidden-sm-down
           | 経験のある方で半年くらいかかります。
       .welcome-small-sections
-        .row.is-gutter-width-32
-          .col-sm-12.col-md-3
+        .row.is-gutter-width-24.welcome-small-sections__row
+          .col-xs-6.col-md-3
             section.welcome-small-section
               .welcome-small-section__inner.is-work
                 = image_tag('mac.svg', class: 'welcome-small-section__icon')
                 h3.welcome-small-section__title
                   | Macの基本
-          .col-sm-12.col-md-3
+          .col-xs-6.col-md-3
             section.welcome-small-section
               .welcome-small-section__inner.is-work
                 = image_tag('html.svg', class: 'welcome-small-section__icon')
                 h3.welcome-small-section__title
                   | HTML
-          .col-sm-12.col-md-3
+          .col-xs-6.col-md-3
             section.welcome-small-section
               .welcome-small-section__inner.is-work
                 = image_tag('css.svg', class: 'welcome-small-section__icon')
                 h3.welcome-small-section__title
                   | CSS
-          .col-sm-12.col-md-3
+          .col-xs-6.col-md-3
             section.welcome-small-section
               .welcome-small-section__inner.is-work
                 = image_tag('linux.svg', class: 'welcome-small-section__icon')
                 h3.welcome-small-section__title
                   | Linux
-          .col-sm-12.col-md-3
+          .col-xs-6.col-md-3
             section.welcome-small-section
               .welcome-small-section__inner.is-work
                 = image_tag('ruby.svg', class: 'welcome-small-section__icon')
                 h3.welcome-small-section__title
                   | Ruby
-          .col-sm-12.col-md-3
+          .col-xs-6.col-md-3
             section.welcome-small-section
               .welcome-small-section__inner.is-work
                 = image_tag('git.svg', class: 'welcome-small-section__icon')
                 h3.welcome-small-section__title
                   | Git
-          .col-sm-12.col-md-3
+          .col-xs-6.col-md-3
             section.welcome-small-section
               .welcome-small-section__inner.is-work
                 = image_tag('rails.svg', class: 'welcome-small-section__icon')
                 h3.welcome-small-section__title
                   | Ruby on Rails
-          .col-sm-12.col-md-3
+          .col-xs-6.col-md-3
             section.welcome-small-section
               .welcome-small-section__inner.is-work
                 = image_tag('js.svg', class: 'welcome-small-section__icon')
