スマホでボタンがかぶってしまう #189 対応

--- a/app/assets/stylesheets/blocks/_page-actions.sass
+++ b/app/assets/stylesheets/blocks/_page-actions.sass
@@ -4,7 +4,7 @@
   display: flex
   justify-content: center
   +media-breakpoint-down(sm)
-    flex-direction: column
+    display: block
 .page-actions__item
   +padding(horizontal, .375rem)
   +media-breakpoint-down(sm)
