デザイン更新

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -5,14 +5,11 @@
 // variables
 //////////////////////////////
 
-@import settings/variables/*
+@import settings/variables/**/*
 @import oulu-variables
 
 // oulu-functions-after-variables (functions need variables)
 @import oulu-functions-after-variables
-
-@import settings/custom-bootstrap/variables
-@import bootstrap/variables
 
 $line-height: 1.4
 
