--- a/app/assets/stylesheets/blocks/user/_user-find-job-assist.sass
+++ b/app/assets/stylesheets/blocks/user/_user-find-job-assist.sass
@@ -3,6 +3,7 @@
   padding: .1875rem .75rem
   border-radius: 1rem
   margin-left: .5rem
-  +inline-block
+  display: inline-block
+
 .user-find-job-assist__value
   +text-block(.625rem 1.45, $main-color)
