--- a/app/views/kaminari/_paginator.html.slim
+++ b/app/views/kaminari/_paginator.html.slim
@@ -1,6 +1,6 @@
 = paginator.render do
-  nav
-    ul.pagination
+  nav.pagination(class="#{'is-' + position}")
+    ul.pagination__items
       == first_page_tag unless current_page.first?
       == prev_page_tag unless current_page.first?
       - each_page do |page|
