--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -3,24 +3,42 @@ header.page-header
   .container
     .page-header__container
       h2.page-header__title
-        = @question.title
+        | 質問
+      = link_to questions_path, class: 'is-button-standard-md-secondary' do
+        i.fa.fa-angle-left
+        = t('to_index_of_questions')
 
 .page-body
-  .container
-    .question
-      .question__description
-        = markdown @question.description
-      .question__content
-        = link_to @question.user, class: 'question__user' do
-          .question__user-icon= gravatar_tag @question.user, size: 44, html: { class: 'category-practices-item__user-icon' }
-          .question__user-name= @question.user.login_name
-        time.contents-list-meta__created_at(datetime="#{@question.created_at.to_datetime}" pubdate="pubdate")
-          = l @question.created_at, format: :short
-        - if current_user == @question.user
-          .question__actions
-            = link_to "編集", edit_question_path(@question), class: 'btn btn-primary'
-            = link_to "削除", question_path(@question), data: { confirm: "本当に宜しいですか？" }, method: :delete, class: 'btn btn-danger'
-      = render @question.answers
+  .report
+    .report__inner
+      header.report__header
+        h1.report__title
+          = @question.title
+      .report__meta
+        .report__author-name
+          = @question.user.login_name
+        time.report__created-at(datetime="#{@question.created_at.to_datetime}" pubdate="pubdate")
+          = l @question.updated_at, format: :date_long_with_time
+      .report__description.js-target-blank.is-long-text-style
+        = emojify(markdown(@question.description))
+      footer.report__body-footer
+        .report__body-footer-container
+          - if @question.user_id == current_user.id
+            .report__actions
+              ul.report__actions-items
+                li.report__actions-item
+                  = link_to edit_question_path(@question), class: 'report__actions-item-link is-success' do
+                    i.fa.fa-pencil
+                li.report__actions-item
+                  = link_to question_path(@question), data: { confirm: t('are_you_sure') }, method: :delete, class: 'report__actions-item-link is-danger' do
+                    i.fa.fa-trash-o
+          = link_to questions_path, class: 'is-button-standard-sm-secondary' do
+            i.fa.fa-angle-left
+            = t('to_index_of_questions')
+    = link_to @question.user, itempro: "url", class: "report__author-link" do
+      = gravatar_tag @question.user, size: 120, html: { class: "report__author-icon"}
+    h3.report-comments-container__title
+      | 回答・コメント
+    = render @question.answers
     .new_question
-      h3 回答する
       = render 'answers/form', question: @question, answer: Answer.new
