--- a/app/assets/stylesheets/blocks/user/_user_dates.sass
+++ b/app/assets/stylesheets/blocks/user/_user_dates.sass
@@ -1,25 +1,33 @@
 .user-dates
   margin-bottom: .125rem
+
 .user-dates__created-at
   +text-block(.8125rem 1.45 .125rem)
+
 .user-dates__update-at
   +text-block(.8125rem 1.45)
+
 .user-dates__created-at-label,
 .user-dates__created-at-value
-  +inline-block
+  display: inline-block
+
 .user-dates__update-at-label
-  +inline-block
+  display: inline-block
+
 .user-dates__update-at-value
-  +inline-block
+  display: inline-block
+
 .user-dates__active-practices
-  +inline-block
+  display: inline-block
+
 .user-dates__active-practice
-  +inline-block
+  display: inline-block
 
 .user-purpose
   +text-block(.8125rem 1.45)
   +media-breakpoint-down(sm)
     margin-bottom: 1rem
+
 .user-purpose__label,
 .user-purpose__value
-  +inline-block
+  display: inline-block
