--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -1,18 +1,29 @@
-.answer-item(class="#{answer == answer.question.correct_answer ? "is-correct_answer" : ""}")
-  .answer-item__description= markdown answer.description
-  .answer-item__content
-    = link_to answer.user, class: 'answer-item__user' do
-      .answer-item__user-icon= gravatar_tag answer.user, size: 44, html: { class: 'category-practices-item__user-icon' }
-      .answer-item__user-name= answer.user.login_name
-    time.contents-list-meta__created_at(datetime="#{answer.created_at.to_datetime}" pubdate="pubdate")
-      = l answer.created_at, format: :short
-    - if current_user == answer.user
-      .answer-item__actions.btn-group
-        = link_to "編集", edit_question_answer_path(answer.question, answer, return_to: question_url(answer.question)), class: 'btn btn-primary'
-        = link_to "削除", question_answer_path(answer.question, answer, return_to: question_url(answer.question)), data: { confirm: "本当に宜しいですか？" }, method: :delete, class: 'btn btn-danger'
+.report-comment(class="#{answer == answer.question.correct_answer ? "is-correct_answer" : ""}")
+  .report-comment__author
+    = link_to answer.user, itempro: 'url', class: 'report-comment__author-link' do
+      = gravatar_tag answer.user, size: 200, html: { class: "report-comment__author-icon"}
+  .report-comment__body
+    header.report-comment__body-header
+      h2.report-comment__login-name
+        = link_to answer.user, itempro: 'url', class: 'report-comment__login-name-link' do
+          = answer.user.login_name
+      time.report-comment__created-at(datetime='#{answer.created_at.to_datetime}' pubdate='pubdate')
+        = l answer.updated_at, format: :date_long_with_time
+    .report-comments__description.js-target-blank.is-long-text-style
+      = emojify(markdown(answer.description))
     - if answer == answer.question.correct_answer
       .answer-item__correct
-        .btn.btn-default 正解
+        | 回答
     - elsif current_user == answer.question.user
         .answer-item__choice
-          = link_to "この回答を正解とする", question_correct_answer_path(answer.question, answer_id: answer.id, return_to: question_path(answer.question)), data: { confirm: "本当に宜しいですか？" }, method: :post, class: 'btn btn-danger'
+          = link_to question_correct_answer_path(answer.question, answer_id: answer.id, return_to: question_path(answer.question)), data: { confirm: "本当に宜しいですか？" }, method: :post, class: 'is-button-standard-sm-warning' do
+            | 解決にする
+    - if answer.user == current_user
+      .report-comment__actions
+        ul.report-comment__actions-items
+          li.report-comment__actions-item
+            = link_to edit_question_answer_path(answer.question, answer, return_to: question_url(answer.question)), class: 'report-comment__actions-item-link' do
+              i.fa.fa-pencil
+          li.report-comment__actions__item
+            = link_to question_answer_path(answer.question, answer, return_to: question_url(answer.question)), data: { confirm: t('are_you_sure') }, method: :delete, class: 'report-comment__actions-item-link' do
+              i.fa.fa-trash-o
