--- a/app/views/kaminari/_first_page.html.slim
+++ b/app/views/kaminari/_first_page.html.slim
@@ -1,2 +1,2 @@
-li.page-item
-  = link_to_unless current_page.first?, raw(t 'views.pagination.first'), url, remote: remote, class: 'page-link'
+li.pagination__item.is-first
+  = link_to_unless current_page.first?, raw("<i class='fa fa-angle-double-left'></i>"), url, remote: remote, class: 'pagination__item-link is-first'
