--- a/app/views/kaminari/_next_page.html.slim
+++ b/app/views/kaminari/_next_page.html.slim
@@ -1,2 +1,2 @@
-li.page-item
-  = link_to_unless current_page.last?, raw(t 'views.pagination.next'), url, rel: 'next', remote: remote, class: 'page-link'
+li.pagination__item.is-next
+  = link_to_unless current_page.last?, raw("<i class='fa fa-angle-right'></i>"), url, rel: 'next', remote: remote, class: 'pagination__item-link is-next'
