--- a/app/views/kaminari/_prev_page.html.slim
+++ b/app/views/kaminari/_prev_page.html.slim
@@ -1,2 +1,2 @@
-li.page-item
-  = link_to_unless current_page.first?, raw(t 'views.pagination.previous'), url, rel: 'prev', remote: remote, class: 'page-link'
+li.pagination__item.is-prev
+  = link_to_unless current_page.first?, raw("<i class='fa fa-angle-left'></i>"), url, rel: 'prev', remote: remote, class: 'pagination__item-link is-prev'
