--- a/app/views/reports/show.html.slim
+++ b/app/views/reports/show.html.slim
@@ -15,7 +15,8 @@ header.page-header
     .report-check-container
       h2.report-check-container__title
         = t('check')
-        = render 'reports/report_check_form' unless current_user == @report.user
+        - unless current_user.checks.find_by(report_id:params[:id]) or current_user == @report.user
+          = render 'reports/report_check_form'
       .report-check
         - if @checks.any?
           = render 'reports/report_check', report: @report
