--- a/app/views/reports/show.html.slim
+++ b/app/views/reports/show.html.slim
@@ -12,13 +12,15 @@ header.page-header
 .page-body
   .container    
     = render 'report', report: @report
-    .report-check-container
-      h2.report-check-container__title
-        = t('check')
-        - unless current_user.checks.find_by(report_id:params[:id]) or current_user == @report.user
-          = render 'reports/report_check_form'
-      .report-check
-        - if @checks.any?
+    - unless current_user.checks.find_by(report_id: params[:id]) or current_user == @report.user
+      = render 'reports/report_check_form'
+    - if @checks.any?
+      .report-check-container
+        h2.report-check-container__title
+          = t('check')
+          = @checks.count
+          = t('check_count')
+        .report-check
           = render 'reports/report_check', report: @report
     .report-comments-container
       h2.report-comments-container__title
