Check一覧のデザイン

--- a/app/assets/stylesheets/blocks/report/_reports.sass
+++ b/app/assets/stylesheets/blocks/report/_reports.sass
@@ -82,3 +82,8 @@
 
 .report-list-item__body
   +text-block(.875rem 1.8)
+
+.report-list-item-meta__created-at
+  +text-block(.875rem 1.45, $muted-text)
+  +media-breakpoint-down(sm)
+    font-size: .75rem
