--- a/app/views/reports/show.html.slim
+++ b/app/views/reports/show.html.slim
@@ -20,8 +20,12 @@ header.page-header
           = t('check')
           = @checks.count
           = t('check_count')
-        .report-check
-          = render 'reports/report_check', report: @report
+        .report-checks
+          .report-check
+            .report-check__body
+              - if @checks.any?
+                - @checks.each do |check|
+                  = render 'reports/report_check', report: @report, check: check
     .report-comments-container
       h2.report-comments-container__title
         = t('comments')
